// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`node-new support \`author\` option: file content: /hello/.eslintrc.js 1`] = `
"module.exports = {
  extends: [
    './node_modules/@c4605/toolconfs/eslintrc.base',
    './node_modules/@c4605/toolconfs/eslintrc.ts',
  ],
  parserOptions: {
    project: './tsconfig.json',
  },
}
"
`;

exports[`node-new support \`author\` option: file content: /hello/README.md 1`] = `
"# hello

## Usage

\`\`\`bash
yarn build # build code
yarn watch # build and watch code
\`\`\`
"
`;

exports[`node-new support \`author\` option: file content: /hello/package.json 1`] = `
"{
  \\"name\\": \\"hello\\",
  \\"version\\": \\"0.1.0\\",
  \\"main\\": \\"lib/index.js\\",
  \\"author\\": \\"c4605 <bolasblack@gmail.com>\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"prepublishOnly\\": \\"yarn build\\",
    \\"build\\": \\"tsc --build .\\",
    \\"watch\\": \\"tsc --watch -p .\\"
  },
  \\"devDependencies\\": {},
  \\"dependencies\\": {},
  \\"prettier\\": \\"@c4605/toolconfs/prettierrc\\"
}"
`;

exports[`node-new support \`author\` option: file content: /hello/src/index.ts 1`] = `
"export function main() {
  console.log('hello from hello')
}

if (require.main === module) {
  main()
}
"
`;

exports[`node-new support \`author\` option: file content: /hello/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@c4605/toolconfs/tsconfig-node\\",
  \\"compilerOptions\\": {
    \\"outDir\\": \\"lib\\"
  },
  \\"exclude\\": [\\"./lib\\"]
}
"
`;

exports[`node-new support \`author\` option: file structure 1`] = `
Array [
  "/hello/README.md",
  "/hello/.eslintrc.js",
  "/hello/package.json",
  "/hello/tsconfig.json",
  "/hello/src/index.ts",
]
`;

exports[`node-new support \`author\` option: rule tasks 1`] = `
Array [
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "prettier",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "typescript",
        "@types/node",
        "eslint",
        "eslint-config-prettier",
        "@typescript-eslint/parser",
        "@typescript-eslint/eslint-plugin",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
]
`;

exports[`node-new works: file content: /hello/.eslintrc.js 1`] = `
"module.exports = {
  extends: [
    './node_modules/@c4605/toolconfs/eslintrc.base',
    './node_modules/@c4605/toolconfs/eslintrc.ts',
  ],
  parserOptions: {
    project: './tsconfig.json',
  },
}
"
`;

exports[`node-new works: file content: /hello/README.md 1`] = `
"# hello

## Usage

\`\`\`bash
yarn build # build code
yarn watch # build and watch code
\`\`\`
"
`;

exports[`node-new works: file content: /hello/package.json 1`] = `
"{
  \\"name\\": \\"hello\\",
  \\"version\\": \\"0.1.0\\",
  \\"main\\": \\"lib/index.js\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"prepublishOnly\\": \\"yarn build\\",
    \\"build\\": \\"tsc --build .\\",
    \\"watch\\": \\"tsc --watch -p .\\"
  },
  \\"devDependencies\\": {},
  \\"dependencies\\": {},
  \\"prettier\\": \\"@c4605/toolconfs/prettierrc\\"
}"
`;

exports[`node-new works: file content: /hello/src/index.ts 1`] = `
"export function main() {
  console.log('hello from hello')
}

if (require.main === module) {
  main()
}
"
`;

exports[`node-new works: file content: /hello/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@c4605/toolconfs/tsconfig-node\\",
  \\"compilerOptions\\": {
    \\"outDir\\": \\"lib\\"
  },
  \\"exclude\\": [\\"./lib\\"]
}
"
`;

exports[`node-new works: file structure 1`] = `
Array [
  "/hello/README.md",
  "/hello/.eslintrc.js",
  "/hello/package.json",
  "/hello/tsconfig.json",
  "/hello/src/index.ts",
]
`;

exports[`node-new works: rule tasks 1`] = `
Array [
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "prettier",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "typescript",
        "@types/node",
        "eslint",
        "eslint-config-prettier",
        "@typescript-eslint/parser",
        "@typescript-eslint/eslint-plugin",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
]
`;
